80-front.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dotzfront-rc
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: dotzfront
    spec:
      containers:
      - name: dotzfront
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotzfront-svc
  labels:
    app: dotzfront
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dotzfront
