ingress-back.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotzback-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dotzback.dotzexemplo.com
    http:
      paths:
      - path: /dotzback
        backend:
          serviceName: dotzback-svc 
          servicePort: 80
      - path: /
        backend:
          serviceName: dotzback-svc
          servicePort: 80
